# projectZero

./: .gitattributes  .gitignore  README.md
.github/scripts/: container_build.sh
.github/workflows/: esp32c5-build-master.yml  esp32c5-build-release-no-discord.yml  pages-webflasher.yml
ESP32/EvilTwin_slave/: EvilTwin_slave.ino
ESP32C5/: -  CMakeLists.txt  README.md  partitions.csv  post_build.cmake  sdkconfig  sdkconfig.backup  sdkconfig.defaults  sdkconfig.old  sdkconfig.xiao
ESP32C5/SKILL/: SKILL.md  commands-reference.md
ESP32C5/binaries-esp32c5/: flash_board.py
ESP32C5/components/nrf24_jammer/: CMakeLists.txt  nrf24.c  nrf24_jammer.c
ESP32C5/components/nrf24_jammer/include/: nrf24.h  nrf24_jammer.h
ESP32C5/components/zig_recon/: CMakeLists.txt  zig_recon.c
ESP32C5/components/zig_recon/include/: zig_recon.h
ESP32C5/docs/: command-manual.md  zig.md
ESP32C5/main/: CMakeLists.txt  idf_component.yml  main.c  oled_display.c  oled_display.h
ESP32C5/tools/: JanOS_app.py  build_bin_docker.py  patch_idf_exfat.cmake  patch_idf_linenoise_utf8.cmake
FLIPPER/: CMakeLists.txt  Lab_C5.c  application.fam  evil_esp.fap
FLIPPER/Evil-ESP/: README.md  application.fam  evil_esp.h  evil_esp_app.c  evil_esp_scenes.c  evil_esp_uart.c
FLIPPER/Legacy_app/: application.fam
FLIPPER/demo/: app.js  index.html  style.css
FLIPPER/evil_twin_controller_v8_1/: README.md  evil_twin_controller.c  evil_twin_controller_i.h
FLIPPER/evil_twin_controller_v8_1/scenes/: evil_twin_logs.c  main_menu.c  network_list.c
FLIPPER/evil_twin_controller_v8_2/: README.md  application.fam  evil_twin_controller.c  evil_twin_controller_i.h
FLIPPER/evil_twin_controller_v8_2/scenes/: main_menu.c  network_list.c
FLIPPER/evil_twin_controller_v8_3/: README.md  evil_twin_controller.c  evil_twin_controller_i.h
FLIPPER/evil_twin_controller_v8_3/scenes/: network_list.c
FLIPPER/evil_twin_controller_v8_4/: README.md  evil_twin_controller.c  evil_twin_controller_i.h
FLIPPER/evil_twin_controller_v8_4/scenes/: network_list.c
FLIPPER/evil_twin_controller_v8_5/: README.md  evil_twin_controller.c  evil_twin_controller_i.h
FLIPPER/evil_twin_controller_v8_5/scenes/: evil_twin_logs.c  main_menu.c  network_list.c
FLIPPERv2/: Lab_C5.c  application.fam
FLIPPERv2/Legacy_app/: evil_esp_app.c  evil_esp_scenes.c  evil_esp_uart.c
docs/: README.md  cli_web.html  index.html  janos_flash.html  manifest.json  quick_start.html  styles.css
